<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/shopping_lists_list_navigation_menu_item"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/shopping_lists_title" />
    <item
            android:id="@+id/scan_barcode_navigation_menu_item"
            android:icon="@drawable/ic_barcode"
            android:title="@string/scan_barcode_title" />
    <item
            android:id="@+id/house_stock_list_navigation_menu_item"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/house_stock_title" />
    <item
            android:id="@+id/trash_list_navigation_menu_item"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash_stock_title" />
</menu>