<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product_name"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_product_name"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"
            android:inputType="textAutoComplete"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product_brand"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_product_brand"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"
            android:inputType="textAutoComplete"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product_description"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_product_description"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"
            android:inputType="textAutoComplete"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product_amount"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_product_amount"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"
            android:inputType="textAutoComplete"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product_due_date"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_product_date"
            android:layout_margin="@dimen/list_item_padding"
            android:textSize="15sp"
            android:inputType="date"/>
</LinearLayout>