<?xml version="1.0" encoding="utf-8"?>
<personal.bw.shopper.ScrollAndRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:id="@+id/products_refresh_layout"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/productsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/productsLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <LinearLayout
                    android:id="@+id/shopping_list_name"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_shopping_list_name"
                        android:layout_margin="@dimen/list_item_padding"
                        android:textSize="25sp"
                        android:layout_gravity="center_vertical"/>

                <EditText
                        android:id="@+id/input_shopping_list_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"/>

            </LinearLayout>

            <ListView
                    android:id="@+id/productsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:id="@+id/noProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/noProductsIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_shopping_cart_black_24dp"/>

            <TextView
                    android:id="@+id/noProductsMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_products_all"
                    android:layout_marginBottom="@dimen/list_item_padding"
                    android:layout_marginTop="@dimen/list_item_padding"/>

            <TextView
                    android:id="@+id/noProductsAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/touch_feedback"
                    android:gravity="center"
                    android:text="@string/no_products_add"/>

        </LinearLayout>
    </RelativeLayout>
</personal.bw.shopper.ScrollAndRefreshLayout>

